    "unittests", "install-data", "install-headers", "install-libs",
    "install-exec", "libs", "apihelp", and "framedhelp" targets to the
    Makefiles of the PDF filters.
  * debian/cups.postinst: Do not create the /usr/share/ppd/1-local-admin
    and /usr/share/ppd/2-third-party links. They are not needed with current
    CUPS and they also break the test procedure during package build.

 -- Till Kamppeter <till.kamppeter@gmail.com>  Sun, 23 Aug 2009 13:30:33 +0200

cups (1.3.11-2) unstable; urgency=low

  [ Till Kamppeter ]
  * debian/cups.init.d: Trigger udev event for all USB printers right after
    starting the CUPS daemon to run the udev callouts for the printers. This
    allows automatic print queue setup and re-enabling print queues also if
    the printer is cold-plugged (connected before CUPS and/or udev got
    started).
  * debian/cups.init.d: Set CUPS RIP cache to 1/4 of the total RAM when CUPS
    is started. This way CUPS Raster drivers get enough memory for reliable
    and quick operation even if large paper sizes with high resolutions are
    printed.
  * debian/local/filters/pdf-filters/pdftoopvp/OPVPOutputDev.cxx,
    debian/local/filters/pdf-filters/pdftoopvp/OPVPOutputDev.h,
    debian/local/filters/pdf-filters/pdftoopvp/pdftoopvp.cxx,
    debian/local/filters/pdf-filters/pdftoopvp/opvp/opvp.h,
    debian/local/filters/pdf-filters/pdftoopvp/opvp/opvp_0_2_0.h: Adapted
    pdftoopvp filter to the new API of Poppler 0.11.2. Thanks to upstream
    author Koji Otani for the patch.
  * debian/rules: Explicitly create empty file pdftoopvp/Dependencies after
    applying the PDF filters add-on as the build servers seem to not copy
    empty files.
  * debian/patches/default_log_warn.dpatch,
    debian/patches/default_log_settings.dpatch: Renamed patch for cupsd.conf
    logging settings and added "MaxLogSize 0" so that CUPS does not do its
    own log rotation, as our log rotation is much better.