@@ -25,7 +25,7 @@ usr/share/man/*/man1/lp.1.gz
 usr/share/man/man1/lpoptions.1.gz
 usr/share/man/*/man1/lpoptions.1.gz
 usr/share/man/man1/lppasswd.1.gz
-usr/share/man/*/man1/lppasswd.1.gz
+#usr/share/man/*/man1/lppasswd.1.gz
 usr/share/man/man1/lpstat.1.gz
 usr/share/man/*/man1/lpstat.1.gz
 usr/share/man/man1/cancel.1.gz
@@ -35,18 +35,18 @@ usr/share/man/*/man5/client.conf.5.gz
 usr/share/man/man8/cupsaddsmb.8.gz
 usr/share/man/*/man8/cupsaddsmb.8.gz
 usr/share/man/man8/cupsenable.8.gz
-usr/share/man/*/man8/cupsenable.8.gz
+#usr/share/man/*/man8/cupsenable.8.gz
 usr/share/man/man8/lpadmin.8.gz
 usr/share/man/*/man8/lpadmin.8.gz
 usr/share/man/man8/lpinfo.8.gz
-usr/share/man/*/man8/lpinfo.8.gz
+#usr/share/man/*/man8/lpinfo.8.gz
 usr/share/man/man8/lpmove.8.gz
 usr/share/man/*/man8/lpmove.8.gz
 usr/share/man/man8/cupsreject.8.gz
-usr/share/man/*/man8/cupsreject.8.gz
+#usr/share/man/*/man8/cupsreject.8.gz
 usr/share/man/man8/cupsdisable.8.gz
-usr/share/man/*/man8/cupsdisable.8.gz
+#usr/share/man/*/man8/cupsdisable.8.gz
 usr/share/man/man8/cupsaccept.8.gz
-usr/share/man/*/man8/cupsaccept.8.gz
+#usr/share/man/*/man8/cupsaccept.8.gz
 usr/share/man/man8/cupsctl.8.gz
 usr/share/man/*/man8/cupsctl.8.gz
