@@ -3,8 +3,6 @@ etc/cups/cupsd.conf
 etc/cups/cupsd.conf.default
 etc/cups/snmp.conf
 etc/cups/ppd
-etc/cups/*.convs
-etc/cups/*.types
 #etc/fonts/conf.d/99pdftoopvp.conf
 usr/lib/cups/backend/* usr/lib/cups/backend-available
 usr/lib/cups/cgi-bin
@@ -43,13 +41,13 @@ usr/share/man/*/man5/printers.conf.5.gz
 usr/share/man/man8/cups-polld.8.gz
 usr/share/man/*/man8/cups-polld.8.gz
 usr/share/man/man8/cupsd.8.gz
-usr/share/man/*/man8/cupsd.8.gz
+#usr/share/man/*/man8/cupsd.8.gz
 usr/share/man/man8/cups-deviced.8.gz
 usr/share/man/*/man8/cups-deviced.8.gz
 usr/share/man/man8/cups-driverd.8.gz
 usr/share/man/*/man8/cups-driverd.8.gz
 usr/share/man/man8/cupsfilter.8.gz
-usr/share/man/*/man8/cupsfilter.8.gz
+#usr/share/man/*/man8/cupsfilter.8.gz
 ../presubj usr/share/bug/cups/
 #../local/backends/* usr/lib/cups/backend-available/
 ../local/filters/cpdftocps usr/lib/cups/filter/
