@@ -70,14 +70,9 @@ binary-post-install/cups::
 	# Ensure that we don't ship anything in /var/run
 	rm -rf $(DEB_DESTDIR)/../cups/var/run
 
-	# Install PPDs into /usr/share/ppd/cups-included/<Manufacturer>, see
-	# http://wiki.debian.org/PpdFileStructureSpecification
-	for i in $(DEB_DESTDIR)/../cups/usr/share/cups/model/*.ppd; do \
-	  m=$$(sed -n -e '/^\*Manufacturer:/s/.*"\([^"]*\)".*/\1/p' $$i); \
-	  mkdir -p "$(DEB_DESTDIR)/../cups/usr/share/ppd/cups-included/$$m"; \
-	  mv $$i "$(DEB_DESTDIR)/../cups/usr/share/ppd/cups-included/$$m/"; \
-	done
+	# PPD directories
 	rmdir $(DEB_DESTDIR)/../cups/usr/share/cups/model
+	mkdir -p "$(DEB_DESTDIR)/../cups/usr/share/ppd/cups-included/"
 
 	dh_usrlocal
 
@@ -92,17 +87,13 @@ binary-post-install/cups::
 	install -m 644 debian/local/filters/pdf-filters/README $(DEB_DESTDIR)/../cups/usr/share/doc/cups/README.pdf-filters
 	install -m 644 debian/local/filters/pdf-filters/filter/test.sh $(DEB_DESTDIR)/../cups/usr/share/doc/cups/examples/texttopdf-text.sh
 	install -m 644 debian/local/filters/pdf-filters/conf/HP-PhotoSmart_Pro_B8300-hpijs-pdftoijs.ppd $(DEB_DESTDIR)/../cups/usr/share/doc/cups/examples/
-	# Move file detection and conversion rules to /usr/share/cups/mime/ so
-	# that the package manager does not consider them conffiles
-	install -d $(DEB_DESTDIR)/../cups/usr/share/cups/mime
-	( cd $(DEB_DESTDIR)/../cups/etc/cups; mv imagetopdf.* pdftopdf.* pdf.* texttopdf.* $(DEB_DESTDIR)/../cups/usr/share/cups/mime/ )
 	# Simple Ghostscript-based PostScript-to-PDF filter
 	install -m 0755 debian/filters/pstopdf $(DEB_DESTDIR)/../cups/usr/lib/cups/filter
 
 	# Increase the cost of pstops to prefer the PDF filter chain for
 	# PostScript printers.
 	sed -i -r -e '/\spstops$$/ { s/66/100/ }' \
-	  debian/$(cdbs_curpkg)/etc/cups/mime.convs
+	  debian/tmp/usr/share/cups/mime/mime.convs
 
 	# Make the serial backend run as root, since /dev/ttyS* are
 	# root:dialout and thus not accessible as user lp
